--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-communications": "^2.2.1",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~2.14.4",
