--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native-stack": "^6.9.13",
     "dotenv": "^16.3.1",
     "expo": "~48.0.18",
@@ -22,11 +25,14 @@
     "react-native-communications": "^2.2.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "1.3.2",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-maps": "1.3.2"
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
