--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-animatable": "^1.3.3",
     "react-native-communications": "^2.2.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.9.1",
