Ajustes nuevas Apis y cambios en noticias

--- a/.env
+++ b/.env
@@ -1,12 +1,13 @@
-API_URL= http://100.25.182.199/api
-API_URL_API= http://100.25.182.199/api
-API_URL_AUT= http://100.25.182.199/img/autoridades 
-API_URL_PDF= http://100.25.182.199/docs/escuela 
-API_URL_ASO= http://100.25.182.199/img/asociacion
-API_URL_INT_ASOC= http://100.25.182.199/img/asociacion/integrantes    
-API_URL_NOT= http://100.25.182.199
-url_escuela1= http://100.25.182.199/api/escuelas/1    
-getNews= http://100.25.182.199/api/noticias     
-url_slider= http://100.25.182.199/img/slider    
-url_logos= http://100.25.182.199/img/logos
+API_URL= https://ingenieria-mecanica-espoch.com/api
+API_URL_API= https://ingenieria-mecanica-espoch.com/api
+API_URL_AUT= https://ingenieria-mecanica-espoch.com/img/autoridades
+API_URL_PDF= https://ingenieria-mecanica-espoch.com/docs/escuela
+API_URL_ASO= https://ingenieria-mecanica-espoch.com/img/asociacion
+API_URL_INT_ASOC= https://ingenieria-mecanica-espoch.com/img/asociacion/integrantes
+API_URL_NOT= https://ingenieria-mecanica-espoch.com
+API_URL_SLID= https://ingenieria-mecanica-espoch.com/api/sliders
+url_escuela1= https://ingenieria-mecanica-espoch.com/api/escuelas/1
+getNews= https://ingenieria-mecanica-espoch.com/api/noticias  
+url_slider= https://ingenieria-mecanica-espoch.com/img/slider
+url_logos= https://ingenieria-mecanica-espoch.com/img/logos
 API_KEY=base64:RC+LB1IlZW8iimk4FztwCSM8r3bRgoKLLB/H0SYSrDc=
