--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native-stack": "^6.9.13",
     "dotenv": "^16.3.1",
-    "expo": "~48.0.18",
-    "expo-constants": "~14.2.1",
-    "expo-location": "~15.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.22",
+    "expo-constants": "~14.4.2",
+    "expo-location": "~16.1.0",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.6",
     "react-native-animatable": "^1.3.3",
     "react-native-communications": "^2.2.1",
     "react-native-dotenv": "^3.4.9",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-image-slider-box": "^2.0.7",
-    "react-native-maps": "1.3.2",
-    "react-native-pager-view": "6.1.2",
+    "react-native-maps": "1.7.1",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.9.1",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0"
   },
