--- a/package.json
+++ b/package.json
@@ -26,15 +26,21 @@
     "react-native-communications": "^2.2.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-lightbox": "^0.8.1",
     "react-native-maps": "1.7.1",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-view-shot": "^3.8.0",
+    "expo-media-library": "~15.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
