--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@ API_URL= https://ingenieria-mecanica-espoch.com/api
 API_URL_API= https://ingenieria-mecanica-espoch.com/api
 API_URL_AUT= https://ingenieria-mecanica-espoch.com/img/autoridades
 API_URL_PDF= https://ingenieria-mecanica-espoch.com/docs/escuela
+API_URL_PDF_DOC= https://ingenieria-mecanica-espoch.com/docs/docentes
 API_URL_ASO= https://ingenieria-mecanica-espoch.com/img/asociacion
+API_URL_DOCEN= https://ingenieria-mecanica-espoch.com/img/docentes
 API_URL_INT_ASOC= https://ingenieria-mecanica-espoch.com/img/asociacion/integrantes
 API_URL_NOT= https://ingenieria-mecanica-espoch.com
 API_URL_SLID= https://ingenieria-mecanica-espoch.com/api/sliders
