--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native-stack": "^6.9.13",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
     "expo": "^49.0.22",
     "expo-constants": "~14.4.2",
     "expo-location": "~16.1.0",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-animatable": "^1.3.3",
     "react-native-communications": "^2.2.1",
     "react-native-dotenv": "^3.4.9",
@@ -39,8 +41,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-view-shot": "^3.8.0",
-    "expo-media-library": "~15.4.1"
+    "react-native-view-shot": "3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
