--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/elements": "^1.3.31",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.2",
     "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
     "expo": "^49.0.22",
@@ -27,6 +31,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-communications": "^2.2.1",
     "react-native-dotenv": "^3.4.9",
+    "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-slider-box": "^2.0.7",
