--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-view-shot": "3.7.0"
+    "react-native-view-shot": "3.7.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-document-picker": "~11.5.4",
+    "expo-camera": "~13.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
