--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
     "expo": "^49.0.22",
+    "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
+    "expo-document-picker": "~11.5.4",
+    "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
     "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
@@ -47,9 +50,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "react-native-view-shot": "3.7.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-document-picker": "~11.5.4",
-    "expo-camera": "~13.4.4"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
